first pass at parser

--- a/data/sotu.yml
+++ b/data/sotu.yml
@@ -17,7 +17,7 @@ entities:
   stores: 
     - sotu_db:
       collection: sotu
-      provider: faiss
+      provider: chroma
       schema: 
         - position int
         - word_count int
