--- a/tests/sotu.yml
+++ b/tests/sotu.yml
@@ -14,6 +14,7 @@ entities:
     sotu_db:
       collection: sotu
       provider: chroma
+      embedding_model: local
       persistent_directory: ./test_db
   datasets:
     sotu_raw:
