--- a/tests/sotu.yml
+++ b/tests/sotu.yml
@@ -23,27 +23,29 @@ entities:
       tokens_per_document: 100
       token_overlap: 20
       store: sotu_db
-  agents:
-    helpful_assistant:
-      model: turbo
-      system_statement: "I am an AI with a specialty in American political science. How can I assist you today?"
-      filename: helpful_assistant.txt
-      variables:
-        - query str
+
+agents:
+  helpful_assistant:
+    model: turbo
+    system_statement: "I am an AI with a specialty in American political science. How can I assist you today?"
+    prompt: |
+      Use the following pieces of context to answer the question at the end. If you don't know the answer, just say that you don't know, don't try to make up an answer.
+
+      {context}
+
+      Question: {query}
+      Helpful Answer:
+    input:
+      - context
+      - query
 
 routines:
   query_the_sotu:
     trigger: user_input
     steps:
-      - retrieve_relevant_documents:
+      retrieve_relevant_documents:
          store: sotu_db
          k_neighbors: 5
          algorithm: cosine_similarity
-      - chat:
+      chat:
          agent: helpful_assistant
-  initialization:
-    trigger: on_launch
-    steps:
-      - load_dataset:
-         store: sotu_db
-         dataset: sotu_raw
