--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-black
-chromadb
-ipdb
-ipykernel
-isort
-openai
-pystache
-pytest
-pytest-cov
-requests
-ruff
-sentence-transformers
-tiktoken
+black==23.7.0
+chromadb==0.4.2
+ipdb==0.13.13
+ipykernel==6.24.0
+isort==5.12.0
+langchain==0.0.240
+openai==0.27.8
+pypdf==3.12.2
+pystache==0.6.0
+pytest==7.4.0
+pytest-cov==4.1.0
+requests==2.31.0
+ruff==0.0.278
+sentence-transformers==2.2.2
+streamlit==1.24.1
+tiktoken==0.4.0
+typer==0.9.0
