--- a/tests/sotu.yml
+++ b/tests/sotu.yml
@@ -1,39 +1,36 @@
 metadata:
+  title: Query the State of the Union
   version: 1.0
   last_updated: "2023-07-15"
-  author: "kassouline"
-  description: "Configuration for a language application that allows users to query the President's State of the Union address using GPT, despite it not being present in the training data."
+  author: "joshuacook"
+  description: "Query the President's State of the Union address using GPT, despite it not being present in the training data."
 
 entities:
-  models:
-    turbo:
-      name: gpt-3.5-turbo-0613
-      kind: chat
-      provider: openai
   stores: 
     sotu_db:
       collection: sotu
       provider: chroma
-      embedding_model: local
-      persistent_directory: ./test_db
+      embedding_model: openai/ada
   datasets:
     sotu_raw:
       source: ./tests/sotu.txt
       format: txt
-      tokens_per_document: 100
-      token_overlap: 20
+      tokens_per_document: 1000
+      token_overlap: 100
       store: sotu_db
 
 agents:
   helpful_assistant:
-    model: turbo
+    model: openai/gpt-3.5-turbo-0613
     system_statement: "I am an AI with a specialty in American political science. How can I assist you today?"
     prompt: |
-      Use the following pieces of context to answer the question at the end. If you don't know the answer, just say that you don't know, don't try to make up an answer.
+      Use the following pieces of context to answer the question at the end. If you don't know the answer, 
+      just say that you don't know, don't try to make up an answer. Please make sure
+      to respond in the form of a direct quote whenever you can.
 
-      {context}
+      {{context}}
 
-      Question: {query}
+      Question: {{query}}
       Helpful Answer:
     input:
       - context
