--- a/tests/sales-playbook.yml
+++ b/tests/sales-playbook.yml
@@ -34,13 +34,12 @@ agents:
       - context
       - query
 
-routines:
-  query_the_sales_playbook:
-    trigger: user_input
-    steps:
-      retrieve_relevant_documents:
-         store: sales_playbook_db
-         k_neighbors: 5
-         algorithm: cosine_similarity
-      chat:
-         agent: helpful_assistant
+routine:
+  trigger: user_input
+  steps:
+    - name: retrieve_relevant_documents
+      store: sales_playbook_db
+      k_neighbors: 5
+      algorithm: cosine_similarity
+    - name: chat
+      agent: helpful_assistant
