--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.10, 3.11]   # Adjust the Python versions as needed
+        python-version: [3.6, 3.7, 3.8, 3.9]   # Adjust the Python versions as needed
 
     steps:
     - uses: actions/checkout@v2
